Shortly before refactoring